# crewai-mcp-neo4j-fastapi

./: .env.example  AMD64_BUILD_GUIDE.md  AMD64_DEPLOYMENT_GUIDE.md  ARCHITECTURE_VERIFICATION.md  DEPLOYMENT_OPTIONS.md  DOCKER_COMPREHENSIVE.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.all-in-one  Dockerfile.amd64  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_REPORT.md  RENDER_DEPLOYMENT.md  build-amd64.sh  build.sh  docker-compose.amd64.yml  docker-compose.render.yml  docker-compose.yml  logging_config.py  main.py  pyproject.toml  requirements.txt  sample.env  security_config.py  test_main.py
frontend/: Dockerfile  next.config.js  package.json
